[gd_scene load_steps=10 format=3 uid="uid://bvj7pk68bmlkd"]

[ext_resource type="Texture2D" uid="uid://fdrlaeggr27m" path="res://Sprites/slime_green.png" id="1_io5lg"]
[ext_resource type="Script" uid="uid://b6hbesft5g4bb" path="res://Scenes/Level/BetterPixel/script/slime_g.gd" id="1_suyu6"]
[ext_resource type="PackedScene" uid="uid://cep8eifl3tebg" path="res://Scenes/Level/Pixel/assets/killzone.tscn" id="2_mvpdw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_axyra"]
atlas = ExtResource("1_io5lg")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rahfb"]
atlas = ExtResource("1_io5lg")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f26tj"]
atlas = ExtResource("1_io5lg")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg0mk"]
atlas = ExtResource("1_io5lg")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_clw7v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axyra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rahfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f26tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg0mk")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6fhd"]
size = Vector2(12, 10)

[node name="SlimeG" type="Node2D"]
script = ExtResource("1_suyu6")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_clw7v")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.621008

[node name="Killzone" parent="." instance=ExtResource("2_mvpdw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_w6fhd")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(15, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(-15, 0)

[node name="RayCastLeftDown" type="RayCast2D" parent="."]
position = Vector2(-14, -4)
target_position = Vector2(0, 7)

[node name="RayCastRightDown" type="RayCast2D" parent="."]
position = Vector2(14, -4)
target_position = Vector2(0, 7)
